--- a/w4prepare/package.json
+++ b/w4prepare/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.0.0",
     "mongodb": "^4.1.2",
+    "mongoose": "^6.0.9",
     "mysql2": "^2.3.0",
     "pug": "^2.0.3",
     "sequelize": "^6.6.5"
